--- a/_posts/2016-04-09-unpub-6.md
+++ b/_posts/2016-04-09-unpub-6.md
@@ -22,7 +22,7 @@ location:
   city: Baltimore
   state: MD
   zip: 21201
-tags: [ 'Festivals' ]
+tags: [ 'Festivals', 'Games' ]
 excerpt: >
   The Unpublished Games Network, also known as Unpub, is an organization that
   helps aspiring game designers establish contacts in the industry, have their
