Add Friends of Arlington Planetarium June weekend.

--- a/_posts/2016-06-11-nerd-nite-june-2016.md
+++ b/_posts/2016-06-11-nerd-nite-june-2016.md
@@ -51,7 +51,7 @@ vaccine development, and the scandals uncovered in the world of scientific
 imaging. Come give your brain one last dose of intellectual medicine before you
 head out for the holidays!
 
-#### What’s in a Genome? Stories from the Human Genome Project
+**What’s in a Genome? Stories from the Human Genome Project**
 
 By Kris Wetterstrand
 
@@ -74,7 +74,7 @@ management team of the Human Genome Project and is marginally ‘famous’ for
 tracking the decreasing costs of DNA sequencing for the past 15 years.  She
 received her M.S. in genetics from Cornell University.
 
-#### Photo Manipulation And Misconduct in Biomedical Research  
+**Photo Manipulation And Misconduct in Biomedical Research**
 
 By Tagide deCarvalho
 
@@ -97,7 +97,7 @@ neuroscientist at the Carnegie Institution and teaching at Georgetown
 University. At the end of the workday, she enjoys posting heavily filtered
 personal photos on Instagram.
 
-#### How to Make a Malaria Vaccine
+**How to Make a Malaria Vaccine**
 
 By Adam Ruben
 
